--- a/Examples/Polar.NameExplorer.Examples/Polar.NameExplorer.Examples.csproj
+++ b/Examples/Polar.NameExplorer.Examples/Polar.NameExplorer.Examples.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Polar.Name.Extractor" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
