--- a/Examples/Polar.NameExplorer.Examples/Polar.NameExplorer.Examples.csproj
+++ b/Examples/Polar.NameExplorer.Examples/Polar.NameExplorer.Examples.csproj
@@ -1,12 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Polar.Name.Extractor" Version="1.0.0" />
+  <ItemGroup>    
+    <PackageReference Include="Polar.Name.Explorer" Version="0.8.5" />
   </ItemGroup>
 
+	<!--<ItemGroup>
+		<PackageReference Include="Polar.Name.Extractor" Version="1.0.0" />
+	</ItemGroup>-->
+
+	
 </Project>
