--- a/Examples/Polar.NameExplorer.Examples/Polar.NameExplorer.Examples.csproj
+++ b/Examples/Polar.NameExplorer.Examples/Polar.NameExplorer.Examples.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>    
-    <PackageReference Include="Polar.Name.Explorer" Version="0.8.6" />
+    <!--<PackageReference Include="Polar.Name.Explorer" Version="0.8.6" />-->
+  </ItemGroup>
+
+  <ItemGroup>
+    <!--<PackageReference Include="PolarNameExplorer"/>-->
+    <PackageReference Include="PolarNameExplorer" Version="0.8.7" />
   </ItemGroup>
 	<!--<ItemGroup>
 		<PackageReference Include="Polar.Name.Extractor" Version="1.0.0" />
